project-yamls/YAMLfiles/repos/kuberay/ray-operator/config/samples/ray-pod.tls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ray-client-tls
  namespace: default
spec:
  containers:
  - name: client
    image: rayproject/ray:2.9.0
    args: [/bin/sh, -c, 'python -c "import ray; ray.init(\"ray://$FQ_RAY_IP:10001\"); print(ray.cluster_resources())" && sleep infinity']
    volumeMounts:
      - mountPath: /etc/ca/tls
        name: ca-tls
        readOnly: true
      - mountPath: /etc/ray/tls
        name: ray-tls
      - mountPath: /etc/gen/tls
        name: gen-tls-script
  volumes:
  - name: gen-tls-script
    configMap:
      name: tls
      defaultMode: 0777
      items:
      - key: gencert_worker.sh
        path: gencert_worker.sh
  - name: ca-tls
    secret:
      secretName: ca-tls
  - name: ray-tls
    emptyDir: {}
