project-yamls/YAMLfiles/repos/kuberay/ray-operator/config/samples/ray-service.high-availability.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0.8
          command:
            - "sh"
            - "-c"
            - "redis-server /usr/local/etc/redis/redis.conf"
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: config
          configMap:
            name: redis-config
---
apiVersion: v1
kind: Pod
metadata:
  name: ray-pod
spec:
  containers:
  - name: ray-container
    image: rayproject/ray:2.9.0
    command: ["/bin/bash", "-c", "--"]
    args: ["while true; do sleep 30; done;"]
    volumeMounts:
      - mountPath: /home/ray/samples
        name: query-configmap
  volumes:
    - name: query-configmap
      configMap:
        name: query-config
        items:
          - key: query.py
            path: query.py
